crates/lyra-tests/tests/snapshots/corpus__lrm__6__6.13__void_data_type__void_object_decl_rejected.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type.void_object_type] 4:7..4:7: void cannot be used as an object type
---
unit (0 diagnostics)
