crates/lyra-tests/tests/snapshots/corpus__lrm__6__6.13__void_data_type__void_return_expr_rejected.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type[32]] 7:9..7:9: void expression cannot be used as a value
---
unit (0 diagnostics)
